apollo-router/src/services/snapshots/apollo_router__services__external__test__it_will_create_an_http_request_span@logs.snap
---
source: apollo-router/src/services/external.rs
expression: yaml
---
- fields: {}
  level: INFO
  message: got request
  span:
    http.request.method: POST
    name: http_request
    otel.kind: CLIENT
    otel.name: "POST http://example.com/test"
    otel.original_name: http_request
    server.address: example.com
    server.port: "80"
    url.full: "http://example.com/test"
  spans:
    - http.request.method: POST
      name: http_request
      otel.kind: CLIENT
      otel.name: "POST http://example.com/test"
      otel.original_name: http_request
      server.address: example.com
      server.port: "80"
      url.full: "http://example.com/test"
