apollo-router/src/services/snapshots/apollo_router__services__external__test__it_will_create_unix_socket_request_span@logs.snap
---
source: apollo-router/src/services/external.rs
expression: yaml
---
- fields: {}
  level: INFO
  message: got unix socket request
  span:
    http.request.method: POST
    name: http_request
    net.transport: unix
    otel.kind: CLIENT
    otel.name: "POST unix:///tmp/test.sock"
    otel.original_name: http_request
    server.address: /tmp/test.sock
    server.port: "0"
    url.full: "unix:///tmp/test.sock"
  spans:
    - http.request.method: POST
      name: http_request
      net.transport: unix
      otel.kind: CLIENT
      otel.name: "POST unix:///tmp/test.sock"
      otel.original_name: http_request
      server.address: /tmp/test.sock
      server.port: "0"
      url.full: "unix:///tmp/test.sock"
